--- a/.github/workflows/01.basic-workflow.yml
+++ b/.github/workflows/01.basic-workflow.yml
@@ -8,7 +8,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: sample-app
     steps:
       - uses: actions/checkout@v4
 
