--- a/sample-app/package.json
+++ b/sample-app/package.json
@@ -7,11 +7,12 @@
     "test": "mocha"
   },
   "dependencies": {
+    "chai-http": "^5.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "mocha": "^8.3.2",
-    "chai": "^4.3.4"
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2"
   },
   "author": "Your Name",
   "license": "MIT"
