--- a/.github/workflows/02.complex-workflows.yml
+++ b/.github/workflows/02.complex-workflows.yml
@@ -30,6 +30,9 @@ jobs:
 
   matrix-build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: sample-app
     strategy:
       matrix:
         node-version: [12, 14, 16]
